--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
-    "mqtt": "^5.7.3"
+    "mqtt": "^5.7.3",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
     "@types/mqtt": "^2.5.0",
     "@types/node": "^20.14.9",
+    "@types/pg": "^8.11.6",
     "typescript": "^5.5.2"
   }
 }
